[gd_scene load_steps=8 format=4 uid="uid://bfuqaamvf6ih0"]

[ext_resource type="Script" path="res://scripts/boss_minigame.gd" id="1_5ln0u"]
[ext_resource type="TileSet" uid="uid://bhw4bxuqfh87o" path="res://assets/1bitplatformerpack/platforming_tileset.tres" id="2_htvxi"]
[ext_resource type="FontFile" uid="uid://cm8dnumwsttrn" path="res://assets/fonts/Silkscreen/slkscr.ttf" id="5_0ttsf"]
[ext_resource type="PackedScene" uid="uid://bgwqpaqgk52bi" path="res://scenes/countdown_label.tscn" id="5_sxhad"]
[ext_resource type="PackedScene" uid="uid://c2iafl58bub3k" path="res://scenes/platforming_player.tscn" id="6_2gjd3"]
[ext_resource type="PackedScene" uid="uid://cjj1vcfh14u06" path="res://scenes/checkpoint_enemy.tscn" id="6_3hmu8"]
[ext_resource type="PackedScene" uid="uid://daybuxnjj7tm5" path="res://scenes/luck_label.tscn" id="7_50shk"]

[node name="BossMinigame" type="Node2D"]
script = ExtResource("1_5ln0u")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(0, 1)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AADv/wgAAQAQAAYAAADw/wgAAQAQAAYAAADx/wgAAQAQAAYAAADy/wgAAQAQAAYAAADz/wgAAQAQAAYAAAD0/wgAAQAQAAYAAAD1/wgAAQAQAAYAAAD2/wgAAQAQAAYAAAD3/wgAAQAQAAYAAAD4/wgAAQAQAAYAAAD5/wgAAQAQAAYAAAD6/wgAAQAQAAYAAAD7/wgAAQAQAAYAAAD8/wgAAQAQAAYAAAD9/wgAAQAQAAYAAAD+/wgAAQAQAAYAAAD//wgAAQAQAAYAAAAAAAgAAQAQAAYAAAABAAgAAQAQAAYAAAACAAgAAQAQAAYAAAADAAgAAQAQAAYAAAAEAAgAAQAQAAYAAAAFAAgAAQAQAAYAAAAGAAgAAQAQAAYAAAAHAAgAAQAQAAYAAAAIAAgAAQAQAAYAAAAJAAgAAQAQAAYAAAAKAAgAAQAQAAYAAAALAAgAAQAQAAYAAAAMAAgAAQAQAAYAAAANAAgAAQAQAAYAAAAOAAgAAQAQAAYAAAAPAAgAAQAQAAYAAAAQAAgAAQAQAAYAAADx//j/AQASABIAAADy//j/AQASABIAAADz//j/AQASABIAAAD0//j/AQASABIAAAD1//j/AQASABIAAAD2//j/AQASABIAAAD3//j/AQASABIAAAD4//j/AQASABIAAAD5//j/AQASABIAAAD6//j/AQASABIAAAD7//j/AQASABIAAAD8//j/AQASABIAAAD9//j/AQASABIAAAD+//j/AQASABIAAAD///j/AQASABIAAAAAAPj/AQASABIAAAABAPj/AQASABIAAAACAPj/AQASABIAAAADAPj/AQASABIAAAAEAPj/AQASABIAAAAFAPj/AQASABIAAAAGAPj/AQASABIAAAAHAPj/AQASABIAAAAIAPj/AQASABIAAAAJAPj/AQASABIAAAAKAPj/AQASABIAAAALAPj/AQASABIAAAAMAPj/AQASABIAAAANAPj/AQASABIAAAAOAPj/AQASABIAAAAOAPn/AQASABIAAAAOAPz/AQASABIAAAAOAP3/AQASABIAAAAOAPr/AQASABIAAAAOAPv/AQASABIAAAAOAP7/AQASABIAAAANAP7/AQASABIAAAAMAP7/AQASABIAAAALAP7/AQASABIAAAAKAP7/AQASABIAAAAJAP7/AQASABIAAAAIAP7/AQASABIAAAAHAP7/AQASABIAAAAGAP7/AQASABIAAAAFAP7/AQASABIAAAAEAP7/AQASABIAAAADAP7/AQASABIAAAACAP7/AQASABIAAAABAP7/AQASABIAAAAAAP7/AQASABIAAAD///7/AQASABIAAAD+//7/AQASABIAAAD9//7/AQASABIAAAD8//7/AQASABIAAAD7//7/AQASABIAAAD6//7/AQASABIAAAD5//7/AQASABIAAAD4//7/AQASABIAAAD3//7/AQASABIAAAD2//7/AQASABIAAAD1//7/AQASABIAAAD0//7/AQASABIAAADz//7/AQASABIAAADx//3/AQASABIAAADx//z/AQASABIAAADx//v/AQASABIAAADx//r/AQASABIAAADx//n/AQASABIAAADy//n/AQASABIAAADz//n/AQASABIAAAD0//n/AQASABIAAAD1//n/AQASABIAAAD2//n/AQASABIAAAD3//n/AQASABIAAAD4//n/AQASABIAAAD5//n/AQASABIAAAD6//n/AQASABIAAAD7//n/AQASABIAAAD8//n/AQASABIAAAD9//n/AQASABIAAAD+//n/AQASABIAAAD///n/AQASABIAAAAAAPn/AQASABIAAAABAPn/AQASABIAAAACAPn/AQASABIAAAADAPn/AQASABIAAAAEAPn/AQASABIAAAAFAPn/AQASABIAAAAGAPn/AQASABIAAAAHAPn/AQASABIAAAAIAPn/AQASABIAAAAJAPn/AQASABIAAAAKAPn/AQASABIAAAALAPn/AQASABIAAAAMAPn/AQASABIAAAANAPn/AQASABIAAAANAPr/AQASABIAAAANAPv/AQASABIAAAANAPz/AQASABIAAAANAP3/AQASABIAAAAMAP3/AQASABIAAAALAP3/AQASABIAAAAKAP3/AQASABIAAAAJAP3/AQASABIAAAAIAP3/AQASABIAAAAHAP3/AQASABIAAAAGAP3/AQASABIAAAAFAP3/AQASABIAAAAEAP3/AQASABIAAAADAP3/AQASABIAAAACAP3/AQASABIAAAABAP3/AQASABIAAAAAAP3/AQASABIAAAD///3/AQASABIAAAD+//3/AQASABIAAAD9//3/AQASABIAAAD8//3/AQASABIAAAD7//3/AQASABIAAAD6//3/AQASABIAAADz//3/AQASABIAAADy//3/AQASABIAAAD0//3/AQASABIAAAD1//3/AQASABIAAAD2//3/AQASABIAAAD3//3/AQASABIAAAD4//3/AQASABIAAAD5//3/AQASABIAAADy//r/AQASABIAAADz//r/AQASABIAAAD0//r/AQASABIAAAD1//r/AQASABIAAAD2//r/AQASABIAAAD3//r/AQASABIAAAD4//r/AQASABIAAAD5//r/AQASABIAAAD6//r/AQASABIAAAD7//r/AQASABIAAAD8//r/AQASABIAAAD9//r/AQASABIAAAD+//r/AQASABIAAAD///r/AQASABIAAAAAAPr/AQASABIAAAABAPr/AQASABIAAAACAPr/AQASABIAAAADAPr/AQASABIAAAAEAPr/AQASABIAAAAFAPr/AQASABIAAAAGAPr/AQASABIAAAAHAPr/AQASABIAAAAIAPr/AQASABIAAAAJAPr/AQASABIAAAAKAPr/AQASABIAAAALAPr/AQASABIAAAAMAPr/AQASABIAAAAMAPv/AQASABIAAAALAPv/AQASABIAAAAKAPv/AQASABIAAAAJAPv/AQASABIAAAAIAPv/AQASABIAAAAHAPv/AQASABIAAAAGAPv/AQASABIAAAAFAPv/AQASABIAAAAEAPv/AQASABIAAAADAPv/AQASABIAAAACAPv/AQASABIAAAABAPv/AQASABIAAAAAAPv/AQASABIAAAD///v/AQASABIAAAD+//v/AQASABIAAAD9//v/AQASABIAAAD8//v/AQASABIAAAD7//v/AQASABIAAAD6//v/AQASABIAAAD5//v/AQASABIAAAD4//v/AQASABIAAAD3//v/AQASABIAAAD2//v/AQASABIAAAD1//v/AQASABIAAAD0//v/AQASABIAAADz//v/AQASABIAAADy//v/AQASABIAAADy//z/AQASABIAAADz//z/AQASABIAAAD0//z/AQASABIAAAD1//z/AQASABIAAAD2//z/AQASABIAAAD3//z/AQASABIAAAD4//z/AQASABIAAAD5//z/AQASABIAAAD6//z/AQASABIAAAD7//z/AQASABIAAAD8//z/AQASABIAAAD9//z/AQASABIAAAD+//z/AQASABIAAAD///z/AQASABIAAAAAAPz/AQASABIAAAABAPz/AQASABIAAAACAPz/AQASABIAAAADAPz/AQASABIAAAAEAPz/AQASABIAAAAFAPz/AQASABIAAAAGAPz/AQASABIAAAAHAPz/AQASABIAAAAIAPz/AQASABIAAAAJAPz/AQASABIAAAAKAPz/AQASABIAAAALAPz/AQASABIAAAAMAPz/AQASABIAAAD//wYAAQAAAAAAAAD//wUAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAADu/wUAAQAAAAAAAADu/wQAAQAAAAAAAADu/wMAAQAAAAAAAADu/wIAAQAAAAAAAADu/wEAAQAAAAAAAADu/wAAAQAAAAAAAADv/wAAAQAAAAAAAADw/wAAAQAAAAAAAADx/wAAAQAAAAAAAADy/wAAAQAAAAAAAADz/wAAAQAAAAAAAAD0/wAAAQAAAAAAAAD1/wAAAQAAAAAAAAD2/wAAAQAAAAAAAAD3/wAAAQAAAAAAAAD4/wAAAQAAAAAAAAD5/wAAAQAAAAAAAAD6/wAAAQAAAAAAAAD7/wAAAQAAAAAAAAD8/wAAAQAAAAAAAAD9/wAAAQAAAAAAAAD+/wAAAQAAAAAAAAD//wAAAQAAAAAAAAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAPAAAAAQAAAAAAAAAQAAAAAQAAAAAAAAARAAAAAQAAAAAAAAARAAEAAQAAAAAAAAARAAIAAQAAAAAAAAARAAMAAQAAAAAAAAARAAQAAQAAAAAAAAARAAUAAQAAAAAAAAARAAYAAQAAAAAAAADu/wYAAQAAAAAAAADv/wYAAQAAAAAAAADw/wYAAQAAAAAAAADx/wYAAQAAAAAAAADy/wYAAQAAAAAAAADz/wYAAQAAAAAAAAD0/wYAAQAAAAAAAAD1/wYAAQAAAAAAAAD2/wYAAQAAAAAAAAD3/wYAAQAAAAAAAAD4/wYAAQAAAAAAAAD5/wYAAQAAAAAAAAD6/wYAAQAAAAAAAAD7/wYAAQAAAAAAAAD8/wYAAQAAAAAAAAD9/wYAAQAAAAAAAAD+/wYAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wQAAQAAAAAAAAD//wQAAQAAAAAAAAAAAAQAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAACAAYAAQAAAAAAAAADAAYAAQAAAAAAAAAOAAYAAQAAAAAAAAAPAAYAAQAAAAAAAAAQAAYAAQAAAAAAAAAQAAUAAQAAAAAAAAAPAAUAAQAAAAAAAAAOAAUAAQAAAAAAAAANAAUAAQAAAAAAAAAMAAUAAQAAAAAAAAALAAUAAQAAAAAAAAAKAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAADAAUAAQAAAAAAAAACAAUAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAANAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAAPAAQAAQAAAAAAAAAQAAQAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wQAAQAAAAAAAAD8/wQAAQAAAAAAAAD7/wQAAQAAAAAAAAD6/wQAAQAAAAAAAAD5/wQAAQAAAAAAAAD4/wQAAQAAAAAAAAD3/wQAAQAAAAAAAAD2/wQAAQAAAAAAAAD1/wQAAQAAAAAAAAD0/wQAAQAAAAAAAADz/wQAAQAAAAAAAADy/wQAAQAAAAAAAADx/wQAAQAAAAAAAADw/wQAAQAAAAAAAADv/wQAAQAAAAAAAADv/wUAAQAAAAAAAADw/wUAAQAAAAAAAADx/wUAAQAAAAAAAADy/wUAAQAAAAAAAADz/wUAAQAAAAAAAAD0/wUAAQAAAAAAAAD1/wUAAQAAAAAAAAD2/wUAAQAAAAAAAAD3/wUAAQAAAAAAAAD4/wUAAQAAAAAAAAD5/wUAAQAAAAAAAAD6/wUAAQAAAAAAAAD7/wUAAQAAAAAAAAD8/wUAAQAAAAAAAADv/wEAAQAAAAAAAADw/wEAAQAAAAAAAADx/wEAAQAAAAAAAADy/wEAAQAAAAAAAADz/wEAAQAAAAAAAAD0/wEAAQAAAAAAAAD1/wEAAQAAAAAAAAD2/wEAAQAAAAAAAAD3/wEAAQAAAAAAAAD4/wEAAQAAAAAAAAD5/wEAAQAAAAAAAAD6/wEAAQAAAAAAAAD7/wEAAQAAAAAAAAD8/wEAAQAAAAAAAAD9/wEAAQAAAAAAAAD+/wEAAQAAAAAAAAD//wEAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAAKAAEAAQAAAAAAAAALAAEAAQAAAAAAAAAMAAEAAQAAAAAAAAANAAEAAQAAAAAAAAAOAAEAAQAAAAAAAAAPAAEAAQAAAAAAAAAQAAEAAQAAAAAAAAAQAAIAAQAAAAAAAAAQAAMAAQAAAAAAAAAPAAMAAQAAAAAAAAAOAAMAAQAAAAAAAAANAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAALAAMAAQAAAAAAAAAKAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAGAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAADAAMAAQAAAAAAAAACAAMAAQAAAAAAAAABAAMAAQAAAAAAAAAAAAMAAQAAAAAAAAD//wMAAQAAAAAAAAD+/wMAAQAAAAAAAAD9/wMAAQAAAAAAAAD8/wMAAQAAAAAAAAD7/wMAAQAAAAAAAAD6/wMAAQAAAAAAAAD5/wMAAQAAAAAAAAD4/wMAAQAAAAAAAAD3/wMAAQAAAAAAAAD2/wMAAQAAAAAAAAD1/wMAAQAAAAAAAAD0/wMAAQAAAAAAAADz/wMAAQAAAAAAAADy/wMAAQAAAAAAAADx/wMAAQAAAAAAAADw/wMAAQAAAAAAAADv/wMAAQAAAAAAAADv/wIAAQAAAAAAAADw/wIAAQAAAAAAAADx/wIAAQAAAAAAAADy/wIAAQAAAAAAAADz/wIAAQAAAAAAAAD0/wIAAQAAAAAAAAD1/wIAAQAAAAAAAAD2/wIAAQAAAAAAAAD3/wIAAQAAAAAAAAD4/wIAAQAAAAAAAAD5/wIAAQAAAAAAAAD6/wIAAQAAAAAAAAD7/wIAAQAAAAAAAAD8/wIAAQAAAAAAAAD9/wIAAQAAAAAAAAD+/wIAAQAAAAAAAAD//wIAAQAAAAAAAAAAAAIAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAFAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAHAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAKAAIAAQAAAAAAAAALAAIAAQAAAAAAAAAMAAIAAQAAAAAAAAANAAIAAQAAAAAAAAAOAAIAAQAAAAAAAAAPAAIAAQAAAAAAAAAQAPb/AQAAAAAAAAARAPb/AQAAAAAAAAARAPf/AQAAAAAAAAARAPj/AQAAAAAAAAARAPn/AQAAAAAAAAARAPr/AQAAAAAAAAARAPv/AQAAAAAAAAARAPz/AQAAAAAAAAARAP3/AQAAAAAAAAARAP7/AQAAAAAAAAARAP//AQAAAAAAAAAQAP//AQAAAAAAAAAQAP7/AQAAAAAAAAAQAPj/AQAAAAAAAAAQAPf/AQAAAAAAAAAPAPb/AQAAAAAAAAAOAPb/AQAAAAAAAAANAPb/AQAAAAAAAAAMAPb/AQAAAAAAAAALAPb/AQAAAAAAAAAKAPb/AQAAAAAAAAAJAPb/AQAAAAAAAAAIAPb/AQAAAAAAAAAHAPb/AQAAAAAAAAAGAPb/AQAAAAAAAAAFAPb/AQAAAAAAAAAEAPb/AQAAAAAAAAADAPb/AQAAAAAAAAACAPb/AQAAAAAAAAABAPb/AQAAAAAAAAAAAPb/AQAAAAAAAAD///b/AQAAAAAAAAD+//b/AQAAAAAAAAD9//b/AQAAAAAAAAD8//b/AQAAAAAAAAD7//b/AQAAAAAAAAD6//b/AQAAAAAAAAD5//b/AQAAAAAAAAD4//b/AQAAAAAAAAD3//b/AQAAAAAAAAD2//b/AQAAAAAAAAD1//b/AQAAAAAAAAD0//b/AQAAAAAAAADz//b/AQAAAAAAAADy//b/AQAAAAAAAADx//b/AQAAAAAAAADw//b/AQAAAAAAAADv//b/AQAAAAAAAADu//b/AQAAAAAAAADu//f/AQAAAAAAAADu//j/AQAAAAAAAADu//n/AQAAAAAAAADu//r/AQAAAAAAAADu//v/AQAAAAAAAADu//z/AQAAAAAAAADu//3/AQAAAAAAAADu//7/AQAAAAAAAADu////AQAAAAAAAADv//f/AQAAAAAAAADv//j/AQAAAAAAAADv//7/AQAAAAAAAADt//b/AQAAAAAAAADt//f/AQAAAAAAAADt//j/AQAAAAAAAADt//n/AQAAAAAAAADu//X/AQAAAAAAAADv//X/AQAAAAAAAADw//X/AQAAAAAAAADx//X/AQAAAAAAAADy//X/AQAAAAAAAADz//X/AQAAAAAAAAD0//X/AQAAAAAAAAD1//X/AQAAAAAAAAD2//X/AQAAAAAAAAD3//X/AQAAAAAAAAD4//X/AQAAAAAAAAD5//X/AQAAAAAAAAD6//X/AQAAAAAAAAD7//X/AQAAAAAAAAD8//X/AQAAAAAAAAD9//X/AQAAAAAAAAD+//X/AQAAAAAAAAD///X/AQAAAAAAAAAAAPX/AQAAAAAAAAABAPX/AQAAAAAAAAACAPX/AQAAAAAAAAADAPX/AQAAAAAAAAAEAPX/AQAAAAAAAAAFAPX/AQAAAAAAAAAGAPX/AQAAAAAAAAAHAPX/AQAAAAAAAAAIAPX/AQAAAAAAAAAJAPX/AQAAAAAAAAAKAPX/AQAAAAAAAAALAPX/AQAAAAAAAAAMAPX/AQAAAAAAAAANAPX/AQAAAAAAAAAOAPX/AQAAAAAAAAAPAPX/AQAAAAAAAAAQAPX/AQAAAAAAAAARAPX/AQAAAAAAAAASAPX/AQAAAAAAAAASAPb/AQAAAAAAAAASAPf/AQAAAAAAAAASAPj/AQAAAAAAAAASAPn/AQAAAAAAAAASAPr/AQAAAAAAAAASAPv/AQAAAAAAAAASAPz/AQAAAAAAAAASAP3/AQAAAAAAAAASAP7/AQAAAAAAAAASAP//AQAAAAAAAAASAAAAAQAAAAAAAAASAAEAAQAAAAAAAAASAAIAAQAAAAAAAAASAAMAAQAAAAAAAAASAAQAAQAAAAAAAAASAAUAAQAAAAAAAAASAAYAAQAAAAAAAAASAAcAAQAAAAAAAAASAAgAAQAAAAAAAAASAAkAAQAAAAAAAAASAAoAAQAAAAAAAAARAAoAAQAAAAAAAAAQAAoAAQAAAAAAAAAPAAoAAQAAAAAAAAAOAAoAAQAAAAAAAAANAAoAAQAAAAAAAAAMAAoAAQAAAAAAAAALAAoAAQAAAAAAAAAKAAoAAQAAAAAAAAAJAAoAAQAAAAAAAAAIAAoAAQAAAAAAAAAHAAoAAQAAAAAAAAAGAAoAAQAAAAAAAAAFAAoAAQAAAAAAAAAEAAoAAQAAAAAAAAADAAoAAQAAAAAAAAACAAoAAQAAAAAAAAABAAoAAQAAAAAAAAAAAAoAAQAAAAAAAAD//woAAQAAAAAAAAD+/woAAQAAAAAAAAD9/woAAQAAAAAAAAD8/woAAQAAAAAAAAD7/woAAQAAAAAAAAD6/woAAQAAAAAAAADt/woAAQAAAAAAAADt/wcAAQAAAAAAAADt/wYAAQAAAAAAAADt/wUAAQAAAAAAAADt/wQAAQAAAAAAAADt/wMAAQAAAAAAAADt/wIAAQAAAAAAAADt/wEAAQAAAAAAAADt/wAAAQAAAAAAAADt////AQAAAAAAAADt//7/AQAAAAAAAADt//3/AQAAAAAAAADt//z/AQAAAAAAAADt//v/AQAAAAAAAADt//r/AQAAAAAAAAD5////AQAAAAAAAAD4////AQAAAAAAAAD3////AQAAAAAAAAD2////AQAAAAAAAAD1////AQAAAAAAAAD0////AQAAAAAAAADz////AQAAAAAAAADy////AQAAAAAAAADy//7/AQAAAAAAAADx//7/AQAAAAAAAADw//7/AQAAAAAAAADw//3/AQAAAAAAAADw//z/AQAAAAAAAADw//v/AQAAAAAAAADw//r/AQAAAAAAAADw//n/AQAAAAAAAADw//j/AQAAAAAAAADw//f/AQAAAAAAAADx//f/AQAAAAAAAADy//f/AQAAAAAAAADz//f/AQAAAAAAAAD0//f/AQAAAAAAAAD1//f/AQAAAAAAAAD2//f/AQAAAAAAAAD3//f/AQAAAAAAAAD4//f/AQAAAAAAAAD5//f/AQAAAAAAAAD6//f/AQAAAAAAAAD7//f/AQAAAAAAAAD8//f/AQAAAAAAAAD9//f/AQAAAAAAAAD+//f/AQAAAAAAAAD///f/AQAAAAAAAAAAAPf/AQAAAAAAAAABAPf/AQAAAAAAAAACAPf/AQAAAAAAAAADAPf/AQAAAAAAAAAEAPf/AQAAAAAAAAAFAPf/AQAAAAAAAAAGAPf/AQAAAAAAAAAHAPf/AQAAAAAAAAAIAPf/AQAAAAAAAAAJAPf/AQAAAAAAAAAKAPf/AQAAAAAAAAALAPf/AQAAAAAAAAAMAPf/AQAAAAAAAAANAPf/AQAAAAAAAAAOAPf/AQAAAAAAAAAPAPf/AQAAAAAAAAAPAPj/AQAAAAAAAAAPAPn/AQAAAAAAAAAPAPr/AQAAAAAAAAAPAPv/AQAAAAAAAAAPAPz/AQAAAAAAAAAPAP3/AQAAAAAAAAAPAP7/AQAAAAAAAAAPAP//AQAAAAAAAAAOAP//AQAAAAAAAAANAP//AQAAAAAAAAAMAP//AQAAAAAAAAALAP//AQAAAAAAAAAKAP//AQAAAAAAAAAJAP//AQAAAAAAAAAIAP//AQAAAAAAAAAHAP//AQAAAAAAAAAGAP//AQAAAAAAAAAFAP//AQAAAAAAAAAEAP//AQAAAAAAAAADAP//AQAAAAAAAAACAP//AQAAAAAAAAABAP//AQAAAAAAAAAAAP//AQAAAAAAAAD/////AQAAAAAAAAD+////AQAAAAAAAAD9////AQAAAAAAAAD8////AQAAAAAAAAD7////AQAAAAAAAAD6////AQAAAAAAAAAKAAAAAQAAAAAAAAALAAAAAQAAAAAAAAAMAAAAAQAAAAAAAAAQAP3/AQAAAAAAAAAQAPz/AQAAAAAAAAAQAPv/AQAAAAAAAAAQAPr/AQAAAAAAAAAQAPn/AQAAAAAAAADv//n/AQAAAAAAAADv//r/AQAAAAAAAADv//v/AQAAAAAAAADv//z/AQAAAAAAAADv//3/AQAAAAAAAADw////AQAAAAAAAADv////AQAAAAAAAADx////AQAAAAAAAAD5/wcAAQAAAAAAAAD4/wcAAQAAAAAAAAD3/wcAAQAAAAAAAAD2/wcAAQAAAAAAAAD1/wcAAQAAAAAAAAD0/wcAAQAAAAAAAADz/wcAAQAAAAAAAADy/wcAAQAAAAAAAADx/wcAAQAAAAAAAADw/wcAAQAAAAAAAADv/wcAAQAAAAAAAADu/wcAAQAAAAAAAADu/wgAAQAAAAAAAADt/wgAAQAAAAAAAADt/wkAAQAAAAAAAADu/wkAAQAAAAAAAADu/woAAQAAAAAAAADv/woAAQAAAAAAAADv/wkAAQAAAAAAAADw/wkAAQAAAAAAAADw/woAAQAAAAAAAADx/woAAQAAAAAAAADx/wkAAQAAAAAAAADy/wkAAQAAAAAAAADy/woAAQAAAAAAAADz/woAAQAAAAAAAADz/wkAAQAAAAAAAAD0/wkAAQAAAAAAAAD0/woAAQAAAAAAAAD1/woAAQAAAAAAAAD1/wkAAQAAAAAAAAD2/wkAAQAAAAAAAAD2/woAAQAAAAAAAAD3/woAAQAAAAAAAAD3/wkAAQAAAAAAAAD4/wkAAQAAAAAAAAD4/woAAQAAAAAAAAD5/woAAQAAAAAAAAD5/wkAAQAAAAAAAAD6/wkAAQAAAAAAAAD7/wkAAQAAAAAAAAD8/wkAAQAAAAAAAAD9/wkAAQAAAAAAAAD+/wkAAQAAAAAAAAD//wkAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAkAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAQAAAAAAAAAIAAkAAQAAAAAAAAAJAAkAAQAAAAAAAAAKAAkAAQAAAAAAAAALAAkAAQAAAAAAAAAMAAkAAQAAAAAAAAANAAkAAQAAAAAAAAAOAAkAAQAAAAAAAAAPAAkAAQAAAAAAAAAQAAkAAQAAAAAAAAARAAkAAQAAAAAAAAARAAgAAQAAAAAAAAARAAcAAQAAAAAAAAAQAAcAAQAAAAAAAAAPAAcAAQAAAAAAAAAOAAcAAQAAAAAAAAANAAcAAQAAAAAAAAANAAYAAQAAAAAAAAAMAAYAAQAAAAAAAAALAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAIAAYAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAcAAQAAAAAAAAADAAcAAQAAAAAAAAACAAcAAQAAAAAAAAABAAcAAQAAAAAAAAAAAAcAAQAAAAAAAAD//wcAAQAAAAAAAAD+/wcAAQAAAAAAAAD9/wcAAQAAAAAAAAD8/wcAAQAAAAAAAAD7/wcAAQAAAAAAAAD6/wcAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAALAAcAAQAAAAAAAAAMAAcAAQAAAAAAAADt//X/AQAAAAAAAAA=")
tile_set = ExtResource("2_htvxi")
collision_enabled = false

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="Player" parent="." instance=ExtResource("6_2gjd3")]
unique_name_in_owner = true
position = Vector2(-1, -1)
collision_mask = 2
motion_mode = 1

[node name="Timer" type="Timer" parent="."]

[node name="CountdownLabel" parent="." instance=ExtResource("5_sxhad")]

[node name="TransitionTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="TimerLabel" type="Label" parent="GameTimer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1054.0
offset_top = -75.0
offset_right = -1014.0
offset_bottom = -52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_0ttsf")
theme_override_font_sizes/font_size = 8
text = "10.0"
horizontal_alignment = 2
metadata/_edit_use_anchors_ = true

[node name="CashLabel" type="Label" parent="GameTimer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -1290.0
offset_top = -75.0
offset_right = -1250.0
offset_bottom = -52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("5_0ttsf")
theme_override_font_sizes/font_size = 8
text = "50000
"
metadata/_edit_use_anchors_ = true

[node name="CheckpointEnemy" parent="." instance=ExtResource("6_3hmu8")]

[node name="LuckLabel" parent="." instance=ExtResource("7_50shk")]
visible = false
